--- a/chef/cookbooks/bcpc/templates/default/ceph/ceph.conf.erb
+++ b/chef/cookbooks/bcpc/templates/default/ceph/ceph.conf.erb
@@ -16,6 +16,7 @@ osd deep scrub interval = <%= @node['bcpc']['ceph']['osd_deep_scrub_interval'] %
 osd scrub max interval = <%= @node['bcpc']['ceph']['osd_scrub_max_interval'] %>
 
 [mon]
+auth allow insecure global id reclaim = <%= node['bcpc']['ceph']['mon_auth_allow_insecure_global_id_reclaim'] %>
 mon compact on start = true
 mon_cpu_threads = <%= node['bcpc']['ceph']['mon_cpu_threads'] %>
 
